{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 176,
  "lineage": "805c336d-a3a7-75aa-144c-3218498c4d06",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dde92b1eb4729209",
            "domain": "vpc",
            "id": "eipalloc-0dde92b1eb4729209",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-52-14-22-218.us-east-2.compute.amazonaws.com",
            "public_ip": "52.14.22.218",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "kerol-nat-gw",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "kerol-nat-gw",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "baston",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0430580de6244e02e",
            "arn": "arn:aws:ec2:us-east-2:804872348047:instance/i-058efcc2d91c672c5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-058efcc2d91c672c5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sbi-web-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07ba0176dc33e492a",
            "private_dns": "ip-10-0-1-251.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.251",
            "public_ip": "18.220.212.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-2:804872348047:key/29b1bbf7-aeb8-4918-b2dc-42ad6997105b",
                "throughput": 0,
                "volume_id": "vol-0d3d5d7be9cd267ca",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d50f056adaa963ce",
            "tags": {
              "Environment": "Public",
              "Name": "Baston-instance"
            },
            "tags_all": {
              "Environment": "Public",
              "Name": "Baston-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f6737b1f3f8e1705"
            ]
          },
          "dependencies": [
            "aws_security_group.baston",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.kerol",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0430580de6244e02e",
            "arn": "arn:aws:ec2:us-east-2:804872348047:instance/i-0bdc13f2013d8625e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bdc13f2013d8625e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sbi-web-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0be479f0ca04452dc",
            "private_dns": "ip-10-0-11-115.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-2:804872348047:key/29b1bbf7-aeb8-4918-b2dc-42ad6997105b",
                "throughput": 0,
                "volume_id": "vol-0b008342f9288c55e",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04f558f502fd51a21",
            "tags": {
              "Environment": "Private",
              "Name": "Private-instance-1"
            },
            "tags_all": {
              "Environment": "Private",
              "Name": "Private-instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0619808c1037b976d"
            ]
          },
          "dependencies": [
            "aws_security_group.nlb",
            "aws_security_group.private_instances",
            "aws_subnet.private_subnets",
            "aws_vpc.kerol",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0430580de6244e02e",
            "arn": "arn:aws:ec2:us-east-2:804872348047:instance/i-06467489be41c9e31",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06467489be41c9e31",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sbi-web-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-008dd6b6c31f97250",
            "private_dns": "ip-10-0-22-106.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.22.106",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-2:804872348047:key/29b1bbf7-aeb8-4918-b2dc-42ad6997105b",
                "throughput": 0,
                "volume_id": "vol-0bb189fd23ede43c4",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-072734f002d629a6b",
            "tags": {
              "Environment": "Private",
              "Name": "Private-instance-2"
            },
            "tags_all": {
              "Environment": "Private",
              "Name": "Private-instance-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0619808c1037b976d"
            ]
          },
          "dependencies": [
            "aws_security_group.nlb",
            "aws_security_group.private_instances",
            "aws_subnet.private_subnets",
            "aws_vpc.kerol",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kerol",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:internet-gateway/igw-0f582de30c61d0bdc",
            "id": "igw-0f582de30c61d0bdc",
            "owner_id": "804872348047",
            "tags": {
              "Name": "kerol-igw",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "kerol-igw",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-07d81438918747ee8"
          },
          "dependencies": [
            "aws_vpc.kerol"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:804872348047:loadbalancer/net/kerol-nlb/c9996a8d5f53ee18",
            "arn_suffix": "net/kerol-nlb/c9996a8d5f53ee18",
            "dns_name": "kerol-nlb-c9996a8d5f53ee18.elb.us-east-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:804872348047:loadbalancer/net/kerol-nlb/c9996a8d5f53ee18",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "kerol-nlb",
            "security_groups": [
              "sg-02fd229dd8cb97601"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09abad3ff8b4ce998"
              },
              {
                "subnet_id": "subnet-0d50f056adaa963ce"
              }
            ],
            "subnets": [
              "subnet-09abad3ff8b4ce998",
              "subnet-0d50f056adaa963ce"
            ],
            "tags": {
              "Name": "kerol-nlb",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "kerol-nlb",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-07d81438918747ee8",
            "zone_id": "ZLMOA37VPKANP"
          },
          "dependencies": [
            "aws_security_group.nlb",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.kerol",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:804872348047:listener/net/kerol-nlb/c9996a8d5f53ee18/faa330a0ac523d80",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:804872348047:targetgroup/kerol-nlb-target-group/76df775977f25561",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:804872348047:listener/net/kerol-nlb/c9996a8d5f53ee18/faa330a0ac523d80",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:804872348047:loadbalancer/net/kerol-nlb/c9996a8d5f53ee18",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.network",
            "aws_lb_target_group.network",
            "aws_security_group.nlb",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.kerol",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:804872348047:targetgroup/kerol-nlb-target-group/76df775977f25561",
            "arn_suffix": "targetgroup/kerol-nlb-target-group/76df775977f25561",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:804872348047:targetgroup/kerol-nlb-target-group/76df775977f25561",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "kerol-nlb-target-group",
            "port": 80,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07d81438918747ee8"
          },
          "dependencies": [
            "aws_vpc.kerol"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "private_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:804872348047:targetgroup/kerol-nlb-target-group/76df775977f25561-20230917083927711800000008",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:804872348047:targetgroup/kerol-nlb-target-group/76df775977f25561",
            "target_id": "i-0bdc13f2013d8625e"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_lb_target_group.network",
            "aws_security_group.nlb",
            "aws_security_group.private_instances",
            "aws_subnet.private_subnets",
            "aws_vpc.kerol",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:804872348047:targetgroup/kerol-nlb-target-group/76df775977f25561-20230917083928078400000009",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:804872348047:targetgroup/kerol-nlb-target-group/76df775977f25561",
            "target_id": "i-06467489be41c9e31"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_lb_target_group.network",
            "aws_security_group.nlb",
            "aws_security_group.private_instances",
            "aws_subnet.private_subnets",
            "aws_vpc.kerol",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dde92b1eb4729209",
            "association_id": "eipassoc-00721d45b26d16b34",
            "connectivity_type": "public",
            "id": "nat-03929470c39d75640",
            "network_interface_id": "eni-076ecee8f3b2102a4",
            "private_ip": "10.0.1.160",
            "public_ip": "52.14.22.218",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d50f056adaa963ce",
            "tags": {
              "Name": "kerol-nat-gw",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "kerol-nat-gw",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnets",
            "aws_vpc.kerol",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:route-table/rtb-04f83d6dee3ac98f6",
            "id": "rtb-04f83d6dee3ac98f6",
            "owner_id": "804872348047",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03929470c39d75640",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kerol-route-private-subnet",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "kerol-route-private-subnet",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d81438918747ee8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnets",
            "aws_vpc.kerol",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:route-table/rtb-0710513f4f572a6ad",
            "id": "rtb-0710513f4f572a6ad",
            "owner_id": "804872348047",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f582de30c61d0bdc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kerol-route-public-subnets",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "kerol-route-public-subnets",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d81438918747ee8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.kerol",
            "aws_vpc.kerol"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5eac8cc9d587e32",
            "route_table_id": "rtb-04f83d6dee3ac98f6",
            "subnet_id": "subnet-04f558f502fd51a21"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private_subnets",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.kerol",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04124b8a433bee12a",
            "route_table_id": "rtb-04f83d6dee3ac98f6",
            "subnet_id": "subnet-072734f002d629a6b"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private_subnets",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.kerol",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ae7c8b776d5c535",
            "route_table_id": "rtb-0710513f4f572a6ad",
            "subnet_id": "subnet-0d50f056adaa963ce"
          },
          "dependencies": [
            "aws_internet_gateway.kerol",
            "aws_route_table.public_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.kerol",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06df6f57e2476d419",
            "route_table_id": "rtb-0710513f4f572a6ad",
            "subnet_id": "subnet-09abad3ff8b4ce998"
          },
          "dependencies": [
            "aws_internet_gateway.kerol",
            "aws_route_table.public_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.kerol",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "baston",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:security-group/sg-0f6737b1f3f8e1705",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.11.0/24",
                  "10.0.22.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0f6737b1f3f8e1705",
            "ingress": [
              {
                "cidr_blocks": [
                  "152.58.31.195/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "kerol-baston-sg20230917083842262900000001",
            "name_prefix": "kerol-baston-sg",
            "owner_id": "804872348047",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07d81438918747ee8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private_subnets",
            "aws_vpc.kerol",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:security-group/sg-02fd229dd8cb97601",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.11.0/24",
                  "10.0.22.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-02fd229dd8cb97601",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "kerol-nlb-sg20230917083842262900000002",
            "name_prefix": "kerol-nlb-sg",
            "owner_id": "804872348047",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07d81438918747ee8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private_subnets",
            "aws_vpc.kerol",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:security-group/sg-0619808c1037b976d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0619808c1037b976d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02fd229dd8cb97601"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "kerol-private-instances-sg20230917083846720900000003",
            "name_prefix": "kerol-private-instances-sg",
            "owner_id": "804872348047",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07d81438918747ee8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nlb",
            "aws_subnet.private_subnets",
            "aws_vpc.kerol",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_from_baston",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.1.251/32"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3892325629",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0619808c1037b976d",
            "security_group_rule_id": "sgr-0e24733607dc42230",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.baston",
            "aws_security_group.baston",
            "aws_security_group.nlb",
            "aws_security_group.private_instances",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.kerol",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:subnet/subnet-04f558f502fd51a21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f558f502fd51a21",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804872348047",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kerol-private-1",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "kerol-private-1",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-07d81438918747ee8"
          },
          "dependencies": [
            "aws_vpc.kerol",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:subnet/subnet-072734f002d629a6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072734f002d629a6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804872348047",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kerol-private-2",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "kerol-private-2",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-07d81438918747ee8"
          },
          "dependencies": [
            "aws_vpc.kerol",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:subnet/subnet-0d50f056adaa963ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d50f056adaa963ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "804872348047",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kerol-public-1",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "kerol-public-1",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-07d81438918747ee8"
          },
          "dependencies": [
            "aws_vpc.kerol",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:subnet/subnet-09abad3ff8b4ce998",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09abad3ff8b4ce998",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "804872348047",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kerol-public-2",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "kerol-public-2",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-07d81438918747ee8"
          },
          "dependencies": [
            "aws_vpc.kerol",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kerol",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:vpc/vpc-07d81438918747ee8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01b6adf635bec37c2",
            "default_route_table_id": "rtb-07661c440b327de23",
            "default_security_group_id": "sg-08e05a2a6df430871",
            "dhcp_options_id": "dopt-fc5c9597",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07d81438918747ee8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07661c440b327de23",
            "owner_id": "804872348047",
            "tags": {
              "Name": "kerol-vpc",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "kerol-vpc",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            }
          }
        }
      ]
    }
  ]
}